# aoc2024

./: .gitignore  Cargo.toml  flake.nix  readme.org
