[package]
name = "unwrapping-advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependencies as needed
num = "0.4"
nom = "7"

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"